<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<TextView android:text="@string/turmas" 
		android:id="@+id/TextView01" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">
	</TextView>
	<Spinner 
        android:id="@+id/sp_turmas"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/selecione_turma"/>

	<TextView android:text="@string/materias" 
		android:id="@+id/TextView02" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">
	</TextView>
	<Spinner 
        android:id="@+id/sp_materias"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/selecione_materia"/>
	<TextView android:text="@string/alunos" 
		android:id="@+id/TextView03" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">
	</TextView>
	<AutoCompleteTextView  
		android:id="@+id/AC_alunos" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
	</AutoCompleteTextView>
	<Button
		android:id="@+id/visualizar"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" 
		android:text="@string/visualizar_aluno">
	</Button>
	<Button
		android:id="@+id/chamada"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:layout_gravity="center_horizontal"
		android:text="@string/fazer_chamada">
	</Button>
</LinearLayout>
