<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <DatePicker android:id="@+id/datePicker"
    	android:layout_height="wrap_content" 
    	android:layout_width="wrap_content"  
    	android:layout_alignParentTop="true"
    	android:layout_centerInParent="true">
    </DatePicker>
    <TextView android:id="@+id/tNumeroFaltas"
    	android:layout_height="wrap_content" 
    	android:layout_width="wrap_content"
    	android:text="@string/numero_faltas"
    	android:layout_below="@+id/datePicker">
    </TextView>
    <EditText  android:id="@+id/eNumeroFaltas"
    	android:layout_height="wrap_content" 
    	android:layout_width="50sp"
    	android:maxLength="3"
    	android:inputType="numberDecimal"
    	android:layout_below="@+id/tNumeroFaltas">
    </EditText>
    <Button android:id="@+id/blancarFaltas"
    	android:layout_height="wrap_content" 
    	android:layout_width="wrap_content"  
   		android:text="@string/finalizar_chamada"  
    	android:layout_below="@+id/eNumeroFaltas">
    </Button>
    <Button  android:id="@+id/bCancelar"
    	android:layout_height="wrap_content" 
    	android:layout_width="wrap_content" 
    	android:layout_toRightOf="@+id/blancarFaltas"
    	android:layout_below="@+id/eNumeroFaltas" 
    	android:text="@string/cancelar">
    </Button>
</RelativeLayout>
